--- a/web/template/top.xhtml
+++ b/web/template/top.xhtml
@@ -22,9 +22,9 @@
                         </h:form>
                     </td>
                     <td>
-                        <form action="/jsf/creationCompte.xhtml" method="POST">
-                            <input type="submit" value="Créer un compte" />
-                        </form>
+                        <h:form>
+                            <h:commandButton action="jsf/creationCompte.xhtml" value="Créer un compte" />
+                        </h:form>
                     </td>
                 </tr>
             </table>
