--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -28,6 +28,7 @@
     background-color: #ece3a5;
     padding: 5px;
     width: 45%;
+    height: 360px;
 }
 
 #rightPaie {
@@ -35,6 +36,7 @@
     background-color: #ece3a5;
     padding: 5px;
     width: 45%;
+    height: 360px;
     margin-bottom: 10px;
 }
 
@@ -96,4 +98,11 @@
   text-decoration : underline;
 }
 
-
+label
+{
+    display: block;
+    width: 200px;
+    margin-top: 5px;
+    float: left;
+    vertical-align: bottom;
+}
