--- a/web/welcomeGWT.css
+++ b/web/welcomeGWT.css
@@ -6,6 +6,12 @@
         Purpose of the stylesheet follows.
 */
 
+html, body{
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+}
+
 root { 
     display: block;
 }
