--- a/web/welcomeGWT.css
+++ b/web/welcomeGWT.css
@@ -1,25 +1,22 @@
-/* 
-    Document   : welcomeGWT
-    Created on : 11 déc. 2013, 17:39:30
-    Author     : Anthony
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
-html, body{
-  height: 100%;
-  width: 100%;
-  min-height: 100%;
+html {
+/* 	padding: 0; */
+/* 	margin: 0; */
+/* 	border: 0; */
+	height: 100%;
+	width: 100%;
+/*   min-height: 100%; */
 }
 
-root { 
-    display: block;
+body {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	height: 100%;
+/*   width: 100%; */
 }
 
-.container {
-    border: 0;
-    margin: 0;
-    backgroudn-color: green;
+#header {
+	padding: 5px;
 }
 
 .homeButton {
@@ -29,13 +26,65 @@ root {
     /*position: absolute;*/
 }
 
-.discButton {
+#discButton {
+ 	
     /*padding-left: 80%;*/
     /*border-left: 80%;*/
-    /*float: right;*/
+/*     float: right; */
     /*width: 10%;*/
     /*display: block;*/
     /*right: 0%;*/
     /*position: absolute;*/
 }
+
+#menu {
+	padding-left: 10%;
+	width: 100%;
+	padding-right: 10%;
+}
+
+#footer {
+/* 	text-align: center; */
+/* 	vertical-align: center; */
+}
+
+root { 
+    display: block;
+}
+
+/* .menu */
+/* { */
+/*     border                      :   1px solid #666; */
+/*     margin                      :   0 auto; */
+/*     background-color            :   #eee; */
+/*     font-size                   :   70%; */
+/*     padding                     :   3px; */
+/* } */
+/* .menu table */
+/* { */
+/*     border-collapse             :   separate; */
+/*     border                      :   1px solid #00f; */
+/*     background-color            :   #ddd; */
+/* } */
+/* .menu .gwt-MenuItem */
+/* { */
+
+/*     cursor                      :   hand; */
+/*     cursor                      :   pointer; */
+
+/*     border                      :   1px solid #999; */
+/*     background-color            :   #eee; */
+/*     padding                     :   2px 10px; */
+/* } */
+/* .menu .gwt-MenuItem-selected */
+/* { */
+/*     background-color            :   #fff; */
+/* } */
+
+/* .container { */
+/*     border: 0; */
+/*     margin: 0; */
+/*     padding: 0; */
+/*     background-color: green; */
+/* } */
 
