--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -132,3 +132,39 @@
     display: inline-block;
     margin-left: 5px;
 }
+
+.bouton{
+    padding: 3px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+    font-size: 12px;
+    display: inline-block;
+}
+.bouton:hover{
+    padding: 3px;
+    background: rgb(161,161,161); /* Old browsers */
+    background: -moz-linear-gradient(top, rgb(161,161,161) 0%, rgb(144,144,144) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(161,161,161)), color-stop(100%,rgb(144,144,144))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgb(161,161,161) 0%,rgb(144,144,144) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgb(161,161,161) 0%,rgb(144,144,144) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgb(161,161,161) 0%,rgb(144,144,144) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgb(161,161,161) 0%,rgb(144,144,144) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', endColorstr='#909090',GradientType=0 ); /* IE6-9 */
+    color:black;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+    font-size: 12px;
+}
