DynamicView marche Le champ recherche de top fonctionne Modification de productible (ajout d'une liste de release) ajout d'un outils NodeSearch pour la recherche Modif d'article.xhtml, de css et de top.xhtml pour la recherche

--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -168,3 +168,15 @@
     border-radius:5px;
     font-size: 12px;
 }
+
+.articlePart{
+    margin-top: 10px;
+    margin-bottom: 3px;
+    padding: 5px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+}
