dirty implementation of 1. menu ;  2. showcase. test of showcase can be done without database..

--- a/web/template/showcase.xhtml
+++ b/web/template/showcase.xhtml
@@ -11,7 +11,7 @@
     </h:head>
     <h:body>
         <!--#{ShowCaseView.initShowCase()}"-->
-        <div><b style="font-size: large">RECOMMANDATION A L'INSTANT:</b></div>
+        <div><b style="font-size: large">RECOMMANDÉ A L'INSTANT:</b></div>
         <h:dataTable value="#{ShowCaseView.showcase}" var="produit"
         styleClass="showcaseTable"
         headerClass="showcaseTableHeader"
