--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -86,15 +86,13 @@
 }
 
 #top a:link, #top a:visited {
-  color: white;
-  font-weight : bold;
+  color: black;
   text-decoration: none;
 }
 
 #top a:link:hover, #top a:visited:hover  {
   color: black;
-  font-weight : bold;
-  text-decoration : underline;
+  text-decoration : none;
 }
 
 .form
