--- a/web/template/top.xhtml
+++ b/web/template/top.xhtml
@@ -73,9 +73,23 @@
                         </h:form>
                     </td>
                     <td>
-                        <h:form>
-                            <h:commandButton value="Panier" action="null" styleClass="bouton"/>
-                        </h:form>
+                        <c:if test="#{empty UserView.user.id}"> 
+                            <c:if test="#{empty CartView.cart.id}">
+                                <h:form>
+                                    <h:commandButton value="Panier (0)" action="null" styleClass="bouton"/>
+                                </h:form>
+                            </c:if>
+                        </c:if>
+                        <c:if test="#{not empty CartView.cart.id}">
+                            <h:form>
+                                <h:commandButton value="#{CartView.getSize()}" action="null" styleClass="bouton"/>
+                            </h:form>
+                        </c:if>
+                        <c:if test="#{not empty UserView.user.id}">
+                            <h:form>
+                                <h:commandButton value="#{UserView.getSize()}" action="null" styleClass="bouton"/>
+                            </h:form>
+                        </c:if>
                     </td>
                 </tr>
             </table>
