Ajout de la page panier(Simple affichage pour le moment) Ajout au panier fonctionne que l'on soit connecté ou pas Modification des routes dans faces-config (une partie pas toutes) Modifcation dans GWTServiceModifyAccountImpl : j'ai du remplacer product par nodeCart, j'espère que ça marchera toujours pour vous

--- a/web/template/top.xhtml
+++ b/web/template/top.xhtml
@@ -76,18 +76,18 @@
                         <c:if test="#{empty UserView.user.id}"> 
                             <c:if test="#{empty CartView.cart.id}">
                                 <h:form>
-                                    <h:commandButton value="Panier (0)" action="null" styleClass="bouton"/>
+                                    <h:commandButton value="Panier (0)" action="#{PanierView.createPage()}" styleClass="bouton"/>
                                 </h:form>
                             </c:if>
                         </c:if>
                         <c:if test="#{not empty CartView.cart.id}">
                             <h:form>
-                                <h:commandButton value="#{CartView.getSize()}" action="null" styleClass="bouton"/>
+                                <h:commandButton value="#{CartView.getSize()}" action="#{PanierView.createPage()}" styleClass="bouton"/>
                             </h:form>
                         </c:if>
                         <c:if test="#{not empty UserView.user.id}">
                             <h:form>
-                                <h:commandButton value="#{UserView.getSize()}" action="null" styleClass="bouton"/>
+                                <h:commandButton value="#{UserView.getSize()}" action="#{PanierView.createPage()}" styleClass="bouton"/>
                             </h:form>
                         </c:if>
                     </td>
