--- a/web/resources/css/pro_dropdown_2.css
+++ b/web/resources/css/pro_dropdown_2.css
@@ -12,9 +12,9 @@ way to fit your requirements.
 .preload1 {background: url(three_1.gif);}
 .preload2 {background: url(three_1a.gif);}
 
-#nav {padding:0; margin:0; list-style:none; height:38px; background:#fff url(three_0.gif) repeat-x; position:relative; z-index:500; font-family:arial, verdana, sans-serif;}
+#nav {padding:0; margin:5px; list-style:none; height:38px; background-color:#ece3a5; position:relative; z-index:500; font-family:arial, verdana, sans-serif;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
 #nav li.top {display:block; float:left; height:38px;}
-#nav li a.top_link {display:block; float:left; height:35px; line-height:33px; color:#999; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 12px; cursor:pointer;background: url(three_0.gif);}
+#nav li a.top_link {display:block; float:left; height:35px; line-height:33px; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 12px; cursor:pointer;background: url(three_0.gif);}
 #nav li a.top_link span {float:left; display:block; padding:0 24px 0 12px; height:35px; background: url(three_0.gif) right top no-repeat;}
 #nav li a.top_link span.down {float:left; display:block; padding:0 24px 0 12px; height:35px; background: url(three_0a.gif) no-repeat right top;}
 
@@ -27,7 +27,7 @@ way to fit your requirements.
 #nav li:hover {position:relative; z-index:200;}
 
 #nav li:hover ul.sub
-{left:1px; top:38px; background: #ECE3A5; padding:3px; border:1px solid #5c731e; white-space:nowrap; width:90px; height:auto; z-index:300;}
+{left:1px; top:38px; background: #ECE3A5; padding:3px; border:1px solid #5c731e; border-top: none; text-align: center; white-space:nowrap; width:100px; height:auto; z-index:300;-webkit-border-bottom-right-radius: 5px;-webkit-border-bottom-left-radius: 5px;-moz-border-radius-bottomright: 5px;-moz-border-radius-bottomleft: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;}
 #nav li:hover ul.sub li
 {display:block; height:20px; position:relative; float:left; width:90px; font-weight:normal;}
 #nav li:hover ul.sub li a
