--- a/web/template/menu.xhtml
+++ b/web/template/menu.xhtml
@@ -6,10 +6,12 @@
         <title>menu</title>
         <link rel="stylesheet" type="text/css" href="resources/css/pro_dropdown_2.css" />
         <script src="js/stuHover.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="../resources/css/pro_dropdown_2.css" />
+        <script src="js/stuHover.js" type="../text/javascript"></script>
     </h:head>
     <h:body>
         <ul id="nav">
-                <li class="top"><a href="index.xhtml" class="top_link"><span>Acceuil</span></a></li>
+                <li class="top"><a href="index.xhtml" class="top_link"><span>Accueil</span></a></li>
                 <li class="top"><a href="#nogo2" id="products" class="top_link"><span class="down">Jeu de Carte</span></a>
                         <ul class="sub">
                                 <li><a href="#nogo3" class="fly">Cameras</a>
