--- a/web/template/menu.xhtml
+++ b/web/template/menu.xhtml
@@ -11,7 +11,8 @@
     </h:head>
     <h:body>
         <ul id="nav">
-                <li class="top"><a href="index.xhtml" class="top_link"><span>Accueil</span></a></li>
+            <li class="top"><h:form><h:link outcome="index" value="Accueil" styleClass="top_link"/>
+            </h:form></li>
                 <li class="top"><a href="#nogo2" id="products" class="top_link"><span class="down">Jeu de Carte</span></a>
                         <ul class="sub">
                                 <li><a href="#nogo3" class="fly">Cameras</a>
