ajout de navigations rules ajout d'une fonction de calcul de prix reel dans Product

--- a/web/template/top.xhtml
+++ b/web/template/top.xhtml
@@ -25,7 +25,7 @@
                         </td>
                         <td>
                             <h:form>
-                                <h:commandButton action="jsf/creationCompte.xhtml" value="Créer un compte" styleClass="bouton"/>
+                                <h:commandButton action="creationCompte" value="Créer un compte" styleClass="bouton"/>
                             </h:form>
                         </td>
                     </tr>
