--- a/web/template/top.xhtml
+++ b/web/template/top.xhtml
@@ -38,7 +38,7 @@
                             <h:outputText value="Bonjour #{UserView.user.firstName}"/>
                         </td>
                         <td>
-                            <a href="/jeu/welcomeGWT.html" class="bouton">Mon compte</a>
+                            <a href="/jeu/gwt/welcomeGWT.html" class="bouton">Mon compte</a>
                         </td>
                         <td>
                             <h:form>
